--- a/pom.xml
+++ b/pom.xml
@@ -4,7 +4,7 @@
     <modelVersion>4.0.0</modelVersion>
 
     <groupId>fr.ouestfrance.querydsl</groupId>
-    <artifactId>library-java-querydsl</artifactId>
+    <artifactId>querydsl</artifactId>
     <version>1.0.0-SNAPSHOT</version>
 
     <properties>
