--- a/pom.xml
+++ b/pom.xml
@@ -31,8 +31,8 @@
     </properties>
 
     <scm>
-        <connection>scm:${scm.url}</connection>
-        <developerConnection>scm:git:${scm.url}</developerConnection>
+        <connection>scm:${project.scm.url}</connection>
+        <developerConnection>scm:git:${project.scm.url}</developerConnection>
         <url>git@github.com:ouest-france/querydsl.git</url>
         <tag>HEAD</tag>
     </scm>
