--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -30,9 +30,8 @@ jobs:
       - name: Code Coverage
         uses: codecov/codecov-action@v3
         with:
-          cache: maven
-        env:
-          CODECOV_TOKEN: ${{ secrets.CODECOV_TOKEN }}
+          name: ${{ github.event.repository.name }}
+          verbose: true
       - name: Sonar
         env:
           SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
