--- a/pom.xml
+++ b/pom.xml
@@ -145,7 +145,9 @@
                 <artifactId>maven-release-plugin</artifactId>
                 <version>3.0.1</version>
                 <configuration>
+                    <tagNameFormat>v@{project.version}</tagNameFormat>
                     <scmCommentPrefix>[ci skip]</scmCommentPrefix>
+                    <arguments>-Dmaven.test.skipTests=true -Dmaven.test.skip=true</arguments>
                 </configuration>
             </plugin>
             <plugin>
